--- a/doc/database/postgresql/postgresql.conf
+++ b/doc/database/postgresql/postgresql.conf
@@ -12,4 +12,17 @@ lc_messages = 'en_US.utf8'
 lc_monetary = 'en_US.utf8'		
 lc_numeric = 'en_US.utf8'		
 lc_time = 'en_US.utf8'			
-default_text_search_config = 'pg_catalog.english'
+default_text_search_config = 'pg_catalog.indonesian'
+autovacuum = on
+autovacuum_max_workers = 3
+autovacuum_naptime = 1min
+autovacuum_vacuum_threshold = 50
+autovacuum_vacuum_insert_threshold = 1000
+autovacuum_analyze_threshold = 50
+autovacuum_vacuum_scale_factor = 0.2
+autovacuum_vacuum_insert_scale_factor = 0.2
+autovacuum_analyze_scale_factor = 0.1
+autovacuum_freeze_max_age = 200000000
+autovacuum_multixact_freeze_max_age = 400000000
+autovacuum_vacuum_cost_delay = 2ms
+autovacuum_vacuum_cost_limit = -1
